styles.css
@import url(https://fonts.googleapis.com/css?family=Roboto+Slab);

body {
  background: #555;
  font-family: "Roboto Slab", sans-serif;
}

.container {
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

.control {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
}

.control__label {
  margin: 10px;
}

.control-panel {
  align-items: center;
  color: #ddd;
  display: flex;
  flex-flow: row wrap;
  font-variant: small-caps;
  justify-content: space-evenly;
  margin: 10px auto;
  width: 100%;
}

.image {
  border-width: 0;
  border-style: solid;
  box-sizing: border-box;
  height: auto;
  max-width: 600px;
  width: 100%;
}

input[type=range] {
  -webkit-appearance: none;
  background: transparent;
  margin: 10px;
  width: 100px;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  background: #fff;
  border-radius: 50%;
  box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, 0.2), 0 0 1px #222;
  height: 20px;
  transform: translateY(-25%);
  width: 20px;
}

input[type=range]::-moz-range-thumb {
  background: #fff;
  border-radius: 50%;
  box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, 0.2), 0 0 1px #222;
  margin: 0;
  height: 20px;
  width: 20px;
}

input[type=range]::-webkit-slider-runnable-track {
  background: #ddd;
  box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 10px;
  width: 100%;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: #d3d;
}

input[type=range]::-moz-range-track {
  background: #ddd;
  box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  height: 10px;
  width: 100%;
}

input[type=range]:focus::-moz-range-track {
  background: #d3d;
}

input[type=range]::-ms-fill-lower {
  background: #fff;
  border-radius: 50%;
  box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, 0.2), 0 0 1px #222;
  margin: 0;
  height: 20px;
  width: 20px;
}

input[type=range]:focus::-ms-fill-lower {
  background: #d3d;
}

input[type=range]::-ms-fill-upper {
  background: #fff;
  border-radius: 50%;
  box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, 0.2), 0 0 1px #222;
  margin: 0;
  height: 20px;
  width: 20px;
}

input[type=range]:focus::-ms-fill-upper {
  background: #d3d;
}

input[type=range]::-ms-track {
  background: #ddd;
  box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
  color: transparent;
  cursor: pointer;
  height: 10px;
  width: 100%;
}

